<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorOnPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_sorting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sort_by"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/colorOnSurface" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp" />

    <RadioGroup
        android:id="@+id/radio_group_sorting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_button_flight_number_newest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/design_dark_default_color_surface"
            android:text="@string/launch_year_newest"
            android:textColor="@color/colorOnSurface" />

        <RadioButton
            android:id="@+id/radio_button_flight_number_oldest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/design_dark_default_color_surface"
            android:text="@string/launch_year_oldest"
            android:textColor="@color/colorOnSurface" />

        <RadioButton
            android:id="@+id/radio_button_mission_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/design_dark_default_color_surface"
            android:text="@string/mission_name"
            android:textColor="@color/colorOnSurface" />

        <TextView
            android:id="@+id/text_filter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/filter_by"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/colorOnSurface" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp" />


        <RadioButton
            android:id="@+id/radio_button_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorOnSecondary"
            android:text="@string/filter_by_success"
            android:textColor="@color/colorOnSurface" />
    </RadioGroup>

</LinearLayout>